nav a margins fixed. Footer nav margins fixed. Spacing adjusted.

--- a/style/index.css
+++ b/style/index.css
@@ -96,8 +96,10 @@ p {
     width:100%;
     /* line-height: 2; */
     text-decoration: none;
+    color: black;
     align-items: center;
-    font-size:6rem;
+    font-size:5rem;
+    margin-bottom: 4%;
     display: flex;
     flex-direction: column;
     /* margin: auto auto; */
@@ -114,8 +116,9 @@ p {
 
 .headerBanner .mainImage{
     width: 100%;
-}
+    Height: 15rem;
 
+}
 
 .top-content {
     display: flex;
@@ -124,7 +127,7 @@ p {
     flex-wrap: wrap;
     /* justify-content: space-evenly; */
     align-items: center;
-    margin-top:8%;
+    margin-top:4%;
     margin-bottom: 5%;
     border-bottom: 1px dashed black;
 }
@@ -140,12 +143,12 @@ p {
 }
 
 .top-content .text-container h2{
-    font-size: 6rem;
+    font-size: 3rem;
 }
 
 .top-content .text-container p{
     color: black;
-    font-size: 3rem;
+    font-size: 1.8rem;
 }
 
 .special{
@@ -163,7 +166,7 @@ p {
 }
 
 .middle-content h2 {
-    font-size:6rem;
+    font-size:3rem;
     padding: 0 2%;
     margin-bottom: 0;
     text-align: center;
@@ -179,10 +182,10 @@ p {
 
 .middle-content .boxes .box {
     width: 35.5%;
-    height: 25rem;
+    height: 20rem;
     background: black;
     margin: 5% 2.5%;
-    font-size: 5rem;
+    font-size: 3rem;
     text-align: center;
     color: white;
     display: flex;
@@ -242,14 +245,14 @@ p {
 
 }
 .bottom-content .text-container h2{
-    font-size:6rem;
+    font-size:3rem;
     margin-top:5%;
 
 }
 
 .bottom-content .text-container p{
     /* margin-top:5%; */
-    font-size:3rem;
+    font-size:1.8rem;
 }
 
 .bottom-content .text-container:last-child {
@@ -276,8 +279,8 @@ footer nav {
 footer nav a {
     color: white;
     text-decoration: none;
-    font-size: 4rem;
-    padding:5%;
+    font-size: 2rem;
+    padding:1%;
 }
 
 @media (min-width:800px){
